src/game.hpp

class Entity;
extern bool command;
void initGameDatafilesAsync(bool moddedReload);
void deinitGame();
void handleButtons(void);
void gameLogic(void);
// behavior function prototypes:
void actAnimator(Entity* my);
void actRotate(Entity* my);
void actLiquid(Entity* my);
void actEmpty(Entity* my);
void actFurniture(Entity* my);
void actMCaxe(Entity* my);
void actStatueAnimator(Entity* my);
void actStatue(Entity* my);
void actDoorFrame(Entity* my);
void actDeathCam(Entity* my);
void actProjectSpiritCam(Entity* my);
void actDeathGhost(Entity* my);
void actDeathGhostLimb(Entity* my);
void actPlayerLimb(Entity* my);
void actTorch(Entity* my);
void actCrystalShard(Entity* my);
void actDoor(Entity* my);
void actHudWeapon(Entity* my);
void actHudArm(Entity* my);
void actHudShield(Entity* my);
void actHudAdditional(Entity* my);
void actHudArrowModel(Entity* my);
void actHudAdditional2(Entity* my);
void actItem(Entity* my);
void actGoldBag(Entity* my);
void actGib(Entity* my);
void actGreasePuddleSpawner(Entity* my);
void actGreasePuddle(Entity* my);
void actMiscPuddle(Entity* my);
void spawnGreasePuddleSpawner(Entity* caster, real_t x, real_t y, int duration);
void actDamageGib(Entity* my);
void actFociGib(Entity* my);
Entity* spawnFociGib(real_t x, real_t y, real_t z, real_t dir, real_t velocityBonus, Uint32 parentUid, int sprite, Uint32 seed);
Entity* spawnGib(Entity* parentent, int customGibSprite = -1);
Entity* spawnDamageGib(Entity* parentent, Sint32 dmgAmount, int gibDmgType, int displayType = 0, bool updateClients = false);
Entity* spawnGibClient(Sint16 x, Sint16 y, Sint16 z, Sint16 sprite);
Entity* spawnMiscPuddle(Entity* parentent, real_t x, real_t y, int sprite, bool updateClients = false);
void serverSpawnGibForClient(Entity* gib);
void actLadder(Entity* my);
void actLadderUp(Entity* my);
void actPortal(Entity* my);
void actWinningPortal(Entity* my);
void actFlame(Entity* my);
void actCampfire(Entity* my);
void actCauldron(Entity* my);
void actWorkbench(Entity* my);
void actMailbox(Entity* my);
Entity* spawnFlame(Entity* parentent, Sint32 sprite);
Entity* spawnFlameSprites(Entity* parentent, Sint32 sprite);
Entity* castMagic(Entity* parentent);
void actSprite(Entity* my);
void actSpriteNametag(Entity* my);
void actSpriteWorldTooltip(Entity* my);
void actSleepZ(Entity* my);
Entity* spawnBang(Sint16 x, Sint16 y, Sint16 z);
Entity* spawnExplosion(Sint16 x, Sint16 y, Sint16 z);
Entity* spawnExplosionFromSprite(Uint16 sprite, Sint16 x, Sint16 y, Sint16 z);
Entity* spawnPoof(Sint16 x, Sint16 y, Sint16 z, real_t scale, bool updateClients = false);
Entity* spawnSleepZ(Sint16 x, Sint16 y, Sint16 z);
Entity* spawnFloatingSpriteMisc(int sprite, Sint16 x, Sint16 y, Sint16 z);
void actArrow(Entity* my);
void actBoulder(Entity* my);
void actBoulderTrap(Entity* my);
void actBoulderTrapHole(Entity* my);
void actBoulderTrapEast(Entity* my);
void actBoulderTrapWest(Entity* my);
void actBoulderTrapSouth(Entity* my);
void actBoulderTrapNorth(Entity* my);
void actHeadstone(Entity* my);
void actThrown(Entity* my);
void actBeartrap(Entity* my);
void actBeartrapLaunched(Entity* my);
void actBomb(Entity* my);
void actDecoyBox(Entity* my);
void actDecoyBoxCrank(Entity* my);
void actSpearTrap(Entity* my);
void actWallBuster(Entity* my);
void actWallBuilder(Entity* my);
void actPowerCrystalBase(Entity* my);
void actPowerCrystal(Entity* my);
void actPowerCrystalParticleIdle(Entity* my);
void actPedestalBase(Entity* my);
void actPedestalOrb(Entity* my);
void actMidGamePortal(Entity* my);
void actCustomPortal(Entity* my);
void actTeleporter(Entity* my);
void actMagicTrapCeiling(Entity* my);
void actTeleportShrine(Entity* my);
void actDaedalusShrine(Entity* my);
void actAssistShrine(Entity* my);
void actBell(Entity* my);
void bellBreakBulb(Entity* my, bool minotaurBreak);
void actSpellShrine(Entity* my);
void actExpansionEndGamePortal(Entity* my);
void actSoundSource(Entity* my);
void actLightSource(Entity* my);
void actSignalTimer(Entity* my);
void actSignalGateAND(Entity* my);
void actWallLock(Entity* my);
void actWallButton(Entity* my);
void actWind(Entity* my);
void createWaterSplash(real_t x, real_t y, int lifetime);
bool frameRateLimit(Uint32 maxFrameRate, bool resetAccumulator = true, bool sleep = false);
void drawAllPlayerCameras();
// function prototypes for charclass.c:
void initClass(int player);
void initClassStats(const int classnum, void* myStats);
void initShapeshiftHotbar(int player);
void deinitShapeshiftHotbar(int player);
bool playerUnlockedShamanSpell(int player, Item* item);
void loadRandomNames();
int mapLevel(int player, int radius, int _x, int _y, bool usingSpell);
void mapLevel2(int player);
void mapFoodOnLevel(int player);
bool mapTileDiggable(const int x, const int y);
void loadAchievementData(const char* path);
void sortAchievementsForDisplay();
real_t getFPSScale(real_t baseFPS);