odin/bindings.odin

    initGameDatafilesAsync :: proc "c" (moddedReload: bool) ---
    deinitGame :: proc "c" () ---
    handleButtons :: proc "c" () ---
    gameLogic :: proc "c" () ---
    actAnimator :: proc "c" (my: ^Entity) ---
    actRotate :: proc "c" (my: ^Entity) ---
    actLiquid :: proc "c" (my: ^Entity) ---
    actEmpty :: proc "c" (my: ^Entity) ---
    actFurniture :: proc "c" (my: ^Entity) ---
    actMCaxe :: proc "c" (my: ^Entity) ---
    actStatueAnimator :: proc "c" (my: ^Entity) ---
    actStatue :: proc "c" (my: ^Entity) ---
    actDoorFrame :: proc "c" (my: ^Entity) ---
    actDeathCam :: proc "c" (my: ^Entity) ---
    actProjectSpiritCam :: proc "c" (my: ^Entity) ---
    actDeathGhost :: proc "c" (my: ^Entity) ---
    actDeathGhostLimb :: proc "c" (my: ^Entity) ---
    actPlayerLimb :: proc "c" (my: ^Entity) ---
    actTorch :: proc "c" (my: ^Entity) ---
    actCrystalShard :: proc "c" (my: ^Entity) ---
    actDoor :: proc "c" (my: ^Entity) ---
    actHudWeapon :: proc "c" (my: ^Entity) ---
    actHudArm :: proc "c" (my: ^Entity) ---
    actHudShield :: proc "c" (my: ^Entity) ---
    actHudAdditional :: proc "c" (my: ^Entity) ---
    actHudArrowModel :: proc "c" (my: ^Entity) ---
    actHudAdditional2 :: proc "c" (my: ^Entity) ---
    actItem :: proc "c" (my: ^Entity) ---
    actGoldBag :: proc "c" (my: ^Entity) ---
    actGib :: proc "c" (my: ^Entity) ---
    actGreasePuddleSpawner :: proc "c" (my: ^Entity) ---
    actGreasePuddle :: proc "c" (my: ^Entity) ---
    actMiscPuddle :: proc "c" (my: ^Entity) ---
    spawnGreasePuddleSpawner :: proc "c" (caster: ^Entity, x: f64, y: f64, duration: i32) ---
    actDamageGib :: proc "c" (my: ^Entity) ---
    actFociGib :: proc "c" (my: ^Entity) ---
    spawnFociGib :: proc "c" (x: f64, y: f64, z: f64, dir: f64, velocityBonus: f64, parentUid: u32, sprite: i32, seed: u32) -> ^Entity ---
    spawnGib :: proc "c" (parentent: ^Entity, customGibSprite: i32) -> ^Entity ---
    spawnDamageGib :: proc "c" (parentent: ^Entity, dmgAmount: i32, gibDmgType: i32, displayType: i32, updateClients: bool) -> ^Entity ---
    spawnGibClient :: proc "c" (x: i16, y: i16, z: i16, sprite: i16) -> ^Entity ---
    spawnMiscPuddle :: proc "c" (parentent: ^Entity, x: f64, y: f64, sprite: i32, updateClients: bool) -> ^Entity ---
    serverSpawnGibForClient :: proc "c" (gib: ^Entity) ---
    actLadder :: proc "c" (my: ^Entity) ---
    actLadderUp :: proc "c" (my: ^Entity) ---
    actPortal :: proc "c" (my: ^Entity) ---
    actWinningPortal :: proc "c" (my: ^Entity) ---
    actFlame :: proc "c" (my: ^Entity) ---
    actCampfire :: proc "c" (my: ^Entity) ---
    actCauldron :: proc "c" (my: ^Entity) ---
    actWorkbench :: proc "c" (my: ^Entity) ---
    actMailbox :: proc "c" (my: ^Entity) ---
    spawnFlame :: proc "c" (parentent: ^Entity, sprite: i32) -> ^Entity ---
    spawnFlameSprites :: proc "c" (parentent: ^Entity, sprite: i32) -> ^Entity ---
    castMagic :: proc "c" (parentent: ^Entity) -> ^Entity ---
    actSprite :: proc "c" (my: ^Entity) ---
    actSpriteNametag :: proc "c" (my: ^Entity) ---
    actSpriteWorldTooltip :: proc "c" (my: ^Entity) ---
    actSleepZ :: proc "c" (my: ^Entity) ---
    spawnBang :: proc "c" (x: i16, y: i16, z: i16) -> ^Entity ---
    spawnExplosion :: proc "c" (x: i16, y: i16, z: i16) -> ^Entity ---
    spawnExplosionFromSprite :: proc "c" (sprite: u16, x: i16, y: i16, z: i16) -> ^Entity ---
    spawnPoof :: proc "c" (x: i16, y: i16, z: i16, scale: f64, updateClients: bool) -> ^Entity ---
    spawnSleepZ :: proc "c" (x: i16, y: i16, z: i16) -> ^Entity ---
    spawnFloatingSpriteMisc :: proc "c" (sprite: i32, x: i16, y: i16, z: i16) -> ^Entity ---
    actArrow :: proc "c" (my: ^Entity) ---
    actBoulder :: proc "c" (my: ^Entity) ---
    actBoulderTrap :: proc "c" (my: ^Entity) ---
    actBoulderTrapHole :: proc "c" (my: ^Entity) ---
    actBoulderTrapEast :: proc "c" (my: ^Entity) ---
    actBoulderTrapWest :: proc "c" (my: ^Entity) ---
    actBoulderTrapSouth :: proc "c" (my: ^Entity) ---
    actBoulderTrapNorth :: proc "c" (my: ^Entity) ---
    actHeadstone :: proc "c" (my: ^Entity) ---
    actThrown :: proc "c" (my: ^Entity) ---
    actBeartrap :: proc "c" (my: ^Entity) ---
    actBeartrapLaunched :: proc "c" (my: ^Entity) ---
    actBomb :: proc "c" (my: ^Entity) ---
    actDecoyBox :: proc "c" (my: ^Entity) ---
    actDecoyBoxCrank :: proc "c" (my: ^Entity) ---
    actSpearTrap :: proc "c" (my: ^Entity) ---
    actWallBuster :: proc "c" (my: ^Entity) ---
    actWallBuilder :: proc "c" (my: ^Entity) ---
    actPowerCrystalBase :: proc "c" (my: ^Entity) ---
    actPowerCrystal :: proc "c" (my: ^Entity) ---
    actPowerCrystalParticleIdle :: proc "c" (my: ^Entity) ---
    actPedestalBase :: proc "c" (my: ^Entity) ---
    actPedestalOrb :: proc "c" (my: ^Entity) ---
    actMidGamePortal :: proc "c" (my: ^Entity) ---
    actCustomPortal :: proc "c" (my: ^Entity) ---
    actTeleporter :: proc "c" (my: ^Entity) ---
    actMagicTrapCeiling :: proc "c" (my: ^Entity) ---
    actTeleportShrine :: proc "c" (my: ^Entity) ---
    actDaedalusShrine :: proc "c" (my: ^Entity) ---
    actAssistShrine :: proc "c" (my: ^Entity) ---
    actBell :: proc "c" (my: ^Entity) ---
    bellBreakBulb :: proc "c" (my: ^Entity, minotaurBreak: bool) ---
    actSpellShrine :: proc "c" (my: ^Entity) ---
    actExpansionEndGamePortal :: proc "c" (my: ^Entity) ---
    actSoundSource :: proc "c" (my: ^Entity) ---
    actLightSource :: proc "c" (my: ^Entity) ---
    actSignalTimer :: proc "c" (my: ^Entity) ---
    actSignalGateAND :: proc "c" (my: ^Entity) ---
    actWallLock :: proc "c" (my: ^Entity) ---
    actWallButton :: proc "c" (my: ^Entity) ---
    actWind :: proc "c" (my: ^Entity) ---
    createWaterSplash :: proc "c" (x: f64, y: f64, lifetime: i32) ---
    frameRateLimit :: proc "c" (maxFrameRate: u32, resetAccumulator: bool, sleep: bool) -> bool ---
    drawAllPlayerCameras :: proc "c" () ---
    initClass :: proc "c" (player: i32) ---
    initClassStats :: proc "c" (classnum: i32, myStats: rawptr) ---
    initShapeshiftHotbar :: proc "c" (player: i32) ---
    deinitShapeshiftHotbar :: proc "c" (player: i32) ---
    playerUnlockedShamanSpell :: proc "c" (player: i32, item: ^Item) -> bool ---
    loadRandomNames :: proc "c" () ---
    mapLevel :: proc "c" (player: i32, radius: i32, _x: i32, _y: i32, usingSpell: bool) -> i32 ---
    mapLevel2 :: proc "c" (player: i32) ---
    mapFoodOnLevel :: proc "c" (player: i32) ---
    mapTileDiggable :: proc "c" (x: i32, y: i32) -> bool ---
    loadAchievementData :: proc "c" (path: ^u8) ---
    sortAchievementsForDisplay :: proc "c" () ---
    getFPSScale :: proc "c" (baseFPS: f64) -> f64 ---
    djb2Hash :: proc "c" (str: ^u8) -> rawptr ---
    ttfTextHashRetrieve :: proc "c" (buckets: ^list_t, str: ^u8, font: ^rawptr, outline: bool) -> ^rawptr ---
    ttfTextHashStore :: proc "c" (buckets: ^list_t, str: ^u8, font: ^rawptr, outline: bool, surf: ^rawptr) -> ^rawptr ---
    ttfTextHash_deconstructor :: proc "c" (data: rawptr) ---
    initApp :: proc "c" (title: ^rawptr, fullscreen: i32) -> i32 ---
    deinitApp :: proc "c" () -> i32 ---
    initVideo :: proc "c" () -> bool ---
    changeVideoMode :: proc "c" (new_xres: i32, new_yres: i32) -> bool ---
    resizeWindow :: proc "c" (new_xres: i32, new_yres: i32) -> bool ---
    generatePolyModels :: proc "c" (start: i32, end: i32, forceCacheRebuild: bool) ---
    generateVBOs :: proc "c" (start: i32, end: i32) ---
    reloadModels :: proc "c" (start: i32, end: i32) ---
    generateTileTextures :: proc "c" () ---
    destroyTileTextures :: proc "c" () ---
    bindTextureAtlas :: proc "c" (index: i32) ---
    mountBaseDataFolders :: proc "c" () -> bool ---
    remountBaseDataFolders :: proc "c" () -> bool ---
    FindConsoleCommand :: proc "c" (str: ^u8, index: i32) -> ^u8 ---
    register_console_entry :: proc "c" (e: ^rawptr) ---
    cvar_setter :: proc "c" (argc: i32, argv: ^^u8) ---
    select_inventory_slot :: proc "c" (player: i32, currentx: i32, currenty: i32, diffx: i32, diffy: i32) ---
    select_spell_slot :: proc "c" (player: i32, currentx: i32, currenty: i32, diffx: i32, diffy: i32) ---
    select_chest_slot :: proc "c" (player: i32, currentx: i32, currenty: i32, diffx: i32, diffy: i32) ---
    select_shop_slot :: proc "c" (player: i32, currentx: i32, currenty: i32, diffx: i32, diffy: i32) ---
    select_tinkering_slot :: proc "c" (player: i32, currentx: i32, currenty: i32, diffx: i32, diffy: i32) ---
    select_alchemy_slot :: proc "c" (player: i32, currentx: i32, currenty: i32, diffx: i32, diffy: i32) ---
    select_feather_slot :: proc "c" (player: i32, currentx: i32, currenty: i32, diffx: i32, diffy: i32) ---
    select_assistshrine_slot :: proc "c" (player: i32, currentx: i32, currenty: i32, diffx: i32, diffy: i32) ---
    select_mail_slot :: proc "c" (player: i32, currentx: i32, currenty: i32, diffx: i32, diffy: i32) ---
    takeScreenshot :: proc "c" (output_path: ^u8) ---
    loadInterfaceResources :: proc "c" () -> bool ---
    freeInterfaceResources :: proc "c" () ---
    clickDescription :: proc "c" (player: i32, entity: ^Entity) ---
    consoleCommand :: proc "c" (command: ^rawptr) ---
    drawMinimap :: proc "c" (player: i32, rect: rawptr, drawingSharedMap: bool) ---
    handleDamageIndicatorTicks :: proc "c" () ---
    drawStatus :: proc "c" (player: i32) ---
    drawStatusNew :: proc "c" (player: i32) ---
    saveCommand :: proc "c" (content: ^u8) ---
    saveConfig :: proc "c" (filename: ^rawptr) -> i32 ---
    defaultConfig :: proc "c" () ---
    updateChestInventory :: proc "c" (player: i32) ---
    takeItemFromChest :: proc "c" (player: i32, item: ^Item, amount: i32, addToSpecificInventoryItem: ^Item, forceNewStack: bool, bDoPickupMessage: bool) -> ^Item ---
    updateShopWindow :: proc "c" (player: i32) ---
    getShopFreeSlot :: proc "c" (player: i32, shopInventory: ^list_t, itemToSell: ^Item, xout: ^i32, yout: ^i32, itemToStackInto: ^Item) -> bool ---
    updateEnemyBar :: proc "c" (source: ^Entity, target: ^Entity, name: ^u8, hp: i32, maxhp: i32, lowPriorityTick: bool, gibType: DamageGib) ---
    autoAddHotbarFilter :: proc "c" (item: ^Item) -> bool ---
    quickStackItems :: proc "c" (player: i32) ---
    sortInventoryItemsOfType :: proc "c" (player: i32, categoryInt: i32, sortRightToLeft: bool) ---
    autosortInventory :: proc "c" (player: i32, sortPaperDoll: bool) ---
    mouseInsidePlayerInventory :: proc "c" (player: i32) -> bool ---
    mouseInsidePlayerHotbar :: proc "c" (player: i32) -> bool ---
    playerLearnedSpellbook :: proc "c" (player: i32, current_item: ^Item) -> bool ---
    numItemsInChest :: proc "c" (player: i32) -> i32 ---
    renderMagicGUI :: proc "c" (winx: i32, winy: i32, winw: i32, winh: i32) ---
    updateMagicGUI :: proc "c" () ---
    drawSustainedSpells :: proc "c" (player: i32) ---
    mouseInBounds :: proc "c" (player: i32, x1: i32, x2: i32, y1: i32, y2: i32) -> bool ---
    updateRightSidebar :: proc "c" () ---
    getCurrentHotbarUnderMouse :: proc "c" (player: i32, outSlotNum: ^i32) -> ^rawptr ---
    warpMouseToSelectedHotbarSlot :: proc "c" (player: i32) -> bool ---
    getInputName :: proc "c" (scancode: u32) -> ^u8 ---
    inputPressed :: proc "c" (scancode: u32) -> ^i8 ---
    inputPressedForPlayer :: proc "c" (player: i32, scancode: u32) -> ^i8 ---
    hotbarGamepadControlEnabled :: proc "c" (player: i32) -> bool ---
    displayAttackPower :: proc "c" (player: i32, output: ^AttackHoverText_T) -> i32 ---
    minimapPingAdd :: proc "c" (srcPlayer: i32, destPlayer: i32, newPing: MinimapPing) ---
    getItemSpritePath :: proc "c" (player: i32, item: ^Item) -> rawptr ---
    getContextMenuOptionsForItem :: proc "c" (player: i32, item: ^Item) -> [dynamic]i32 ---
    getContextTooltipOptionsForItem :: proc "c" (player: i32, item: ^Item, useDropdownMenu: i32, hotbarItem: bool) -> [dynamic]i32 ---
